--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Site</title>
+    <title>Cherry Quiz Event #1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,7 +18,7 @@
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
-        .quiz-container h1 {
+        .quiz-container h1, .quiz-container p {
             text-align: center;
         }
         .quiz-container label {
@@ -40,7 +40,9 @@
 </head>
 <body>
     <div class="quiz-container">
-        <h1>Quiz</h1>
+        <h1>Welcome to Cherry Quiz Event #1</h1>
+        <p>We hope you do well and have fun while answering these questions. Good luck!</p>
+        
         <form id="quizForm">
             <label for="question1">1. What is the capital of France?</label>
             <input type="text" id="question1" name="question1" required>
