--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
     <div class="quiz-container">
         <h1>Welcome to Cherry Quiz Event #1</h1>
         <p>We hope you do well and have fun while answering these questions. Good luck!</p>
-        
+
         <form id="quizForm">
+            <label for="discordName">Your Discord Name:</label>
+            <input type="text" id="discordName" name="discordName" required>
+
+            <label for="tradeName">Your Trade Name:</label>
+            <input type="text" id="tradeName" name="tradeName" required>
+
             <label for="question1">1. What is the capital of France?</label>
             <input type="text" id="question1" name="question1" required>
 
