--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <label for="question1">1. In my nation , only royalty is permitted. What realme am I in?</label>
             <input type="text" id="question1" name="question1" required>
 
-            <label for="question2">2. What is 5 + 3?</label>
+            <label for="question2">2. I will remain indestructible even when everything will be gone. What am i?</label>
+            <p> <strong> Hint:</strong> shiny </p>
             <input type="text" id="question2" name="question2" required>
 
             <label for="question3">3. Who wrote 'Hamlet'?</label>
