--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p> <strong> Hint:</strong> shiny </p>
             <input type="text" id="question2" name="question2" required>
 
-            <label for="question3">3. Who wrote 'Hamlet'?</label>
+            <label for="question3">3. i have no weakness. did i also mention rich?</label>
             <input type="text" id="question3" name="question3" required>
 
             <button type="submit">Submit Answers</button>
