--- a/index.html
+++ b/index.html
@@ -50,15 +50,31 @@
             <label for="tradeName">Your Trade Name:</label>
             <input type="text" id="tradeName" name="tradeName" required>
 
-            <label for="question1">1. In my nation , only royalty is permitted. What realme am I in?</label>
+            <label for="question1">1. In my nation, only royalty is permitted. What realme am I in?</label>
             <input type="text" id="question1" name="question1" required>
 
-            <label for="question2">2. I will remain indestructible even when everything will be gone. What am i?</label>
+            <label for="question2">2. I will remain indestructible even when everything will be gone. What am I?</label>
             <p> <strong> Hint:</strong> shiny </p>
             <input type="text" id="question2" name="question2" required>
 
-            <label for="question3">3. i have no weakness. did i also mention rich?</label>
+            <label for="question3">3. I have no weakness. Did I also mention rich?</label>
             <input type="text" id="question3" name="question3" required>
+
+            <!-- Add five more questions -->
+            <label for="question4">4. What color is the sky on a clear day?</label>
+            <input type="text" id="question4" name="question4" required>
+
+            <label for="question5">5. What is the largest mammal on Earth?</label>
+            <input type="text" id="question5" name="question5" required>
+
+            <label for="question6">6. What element does 'O' represent on the periodic table?</label>
+            <input type="text" id="question6" name="question6" required>
+
+            <label for="question7">7. How many continents are there on Earth?</label>
+            <input type="text" id="question7" name="question7" required>
+
+            <label for="question8">8. What is the tallest mountain in the world?</label>
+            <input type="text" id="question8" name="question8" required>
 
             <button type="submit">Submit Answers</button>
         </form>
