--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <label for="tradeName">Your Trade Name:</label>
             <input type="text" id="tradeName" name="tradeName" required>
 
-            <label for="question1">1. In my nation, only royalty is permitted. What realme am I in?</label>
+            <label for="question1">1. In my nation, only royalty is permitted. What realm am I in?</label>
             <input type="text" id="question1" name="question1" required>
 
             <label for="question2">2. I will remain indestructible even when everything will be gone. What am I?</label>
