--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <label for="question5">5. What is the largest mammal on Earth?</label>
             <input type="text" id="question5" name="question5" required>
 
-            <label for="question6">6. What element does 'O' represent on the periodic table?</label>
+            <label for="question6">6. Am i richer than opulina 🤔? Do i need to ask adam?</label>
+            <p> <strong> Hint: </strong> 💯 </p>
             <input type="text" id="question6" name="question6" required>
 
             <label for="question7">7. How many continents are there on Earth?</label>
