--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <label for="question4">4. Okay i warrant the giant title. but am not the biggest monster right?</label>
             <input type="text" id="question4" name="question4" required>
 
-            <label for="question5">5. What is the largest mammal on Earth?</label>
+            <label for="question5">5. Am a literal sniper. Why is my weakness a sword?</label>
             <input type="text" id="question5" name="question5" required>
 
             <label for="question6">6. Am i richer than opulina 🤔? Do i need to ask adam?</label>
