--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <p> <strong> Hint: </strong> 💯 </p>
             <input type="text" id="question6" name="question6" required>
 
-            <label for="question7">7. How many continents are there on Earth?</label>
+            <label for="question7">7. Why did no one cared about me being elven until the gods showed up?</label>
+            <p><strong>Hint:</strong> i will not disgrace my lineage</p>
             <input type="text" id="question7" name="question7" required>
 
             <label for="question8">8. What is the tallest mountain in the world?</label>
