--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p><strong>Hint:</strong> i will not disgrace my lineage</p>
             <input type="text" id="question7" name="question7" required>
 
-            <label for="question8">8. What is the tallest mountain in the world?</label>
+            <label for="question8">8. In front of the elves, i might as well not be seen 😮‍💨?</label>
             <input type="text" id="question8" name="question8" required>
 
             <button type="submit">Submit Answers</button>
