--- a/index.html
+++ b/index.html
@@ -54,29 +54,43 @@
             <input type="text" id="question1" name="question1" required>
 
             <label for="question2">2. I will remain indestructible even when everything will be gone. What am I?</label>
-            <p> <strong> Hint:</strong> shiny </p>
+            <p> <strong>Hint:</strong> shiny </p>
             <input type="text" id="question2" name="question2" required>
 
             <label for="question3">3. I have no weakness. Did I also mention rich?</label>
             <input type="text" id="question3" name="question3" required>
 
-            <!-- Add five more questions -->
-            <label for="question4">4. Okay i warrant the giant title. but am not the biggest monster right?</label>
+            <label for="question4">4. Okay, I warrant the giant title, but am not the biggest monster right?</label>
             <input type="text" id="question4" name="question4" required>
 
             <label for="question5">5. Am a literal sniper. Why is my weakness a sword?</label>
             <input type="text" id="question5" name="question5" required>
 
-            <label for="question6">6. Am i richer than opulina 🤔? Do i need to ask adam?</label>
-            <p> <strong> Hint: </strong> 💯 </p>
+            <label for="question6">6. Am I richer than Opulina? Do I need to ask Adam?</label>
+            <p> <strong>Hint:</strong> 💯 </p>
             <input type="text" id="question6" name="question6" required>
 
-            <label for="question7">7. Why did no one cared about me being elven until the gods showed up?</label>
-            <p><strong>Hint:</strong> i will not disgrace my lineage</p>
+            <label for="question7">7. Why did no one care about me being elven until the gods showed up?</label>
+            <p><strong>Hint:</strong> I will not disgrace my lineage</p>
             <input type="text" id="question7" name="question7" required>
 
-            <label for="question8">8. In front of the elves, i might as well not be seen 😮‍💨?</label>
+            <label for="question8">8. In front of the elves, I might as well not be seen?</label>
             <input type="text" id="question8" name="question8" required>
+
+            <label for="question9">9. I am the route to an aquatic treasure; I am old but strong, and I may be discovered in a crowded city.</label>
+            <input type="text" id="question9" name="question9" required>
+
+            <label for="question10">10. Not everyone helped me open, but I give everyone something.</label>
+            <input type="text" id="question10" name="question10" required>
+
+            <label for="question11">11. You don’t have to work out; just give me a few bucks, and I’ll help you get stronger.</label>
+            <input type="text" id="question11" name="question11" required>
+
+            <label for="question12">12. Through their fall, my prize I claim, From each defeat, I earn my fame. What reward comes from this endless spree, As pigs fall down, one, two, then three?</label>
+            <input type="text" id="question12" name="question12" required>
+
+            <label for="question13">13. With leather gloves in hand, I take my time, Piece by piece, a silent rhyme. What is this gift, made by design, Forged from my hands, a craft divine?</label>
+            <input type="text" id="question13" name="question13" required>
 
             <button type="submit">Submit Answers</button>
         </form>
